# MeshVault

./: .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  KnowledgeBase.md  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  test_compare.py  test_glb_export.mjs  verify_glb.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: app.py  archive_inspector.py  export_manager.py  fbx_converter.py  file_browser.py
docs/: README.md  api.md  architecture.md  faq.md  getting_started.md
docs/backlog/completed/: 001_gltf_glb_support.md  002_thumbnail_grid_view.md  003_wireframe_toggle.md  004_search_filter.md  005_background_color_picker.md
docs/backlog/planned/: 006_material_editor.md  007_component_picker.md  008_mtl_export.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js  export_panel.js  file_browser.js  viewer_3d.js
tests/: test_file_browser.py  test_glb_export_integration.py
